--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.4",
     "react-three-fiber": "^6.0.13",
+    "react-toastify": "^11.0.2",
     "three": "^0.171.0"
   },
   "scripts": {
